<resources>
    <string name="app_name">CarValAppAndroid</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_about">About</string>
    <string name="title_article">Article</string>
    <string name="article_form">Form</string>

    <!--DarkMode -->
    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_follow_system" translatable="false">follow_system</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="terms_of_service">Career Validity - Terms of Service\n\nLast Updated: Dec, 22, 2023\n\nWelcome to Career Validity! These Terms of Service (\"Terms\") govern your use of the Career Validity application and related services (collectively referred to as the \"App\"). By accessing or using the App, you agree to comply with and be bound by these Terms. If you do not agree with these Terms, please do not use the App.\nBy using the Career Validity App, you acknowledge that you have read, understood, and agree to be bound by these Terms. These Terms constitute a legally binding agreement between you and Career Validity.\nCareer Validity is an application designed to predict and validate the authenticity of job opportunities. The App offers features to detect job vacancies and provides articles related to jobs and careers for informational purposes.\n\nBy using the App, you agree to:\n\na. Use the App for lawful purposes only and comply with all applicable laws and regulations.\nb. Respect the intellectual property rights of Career Validity and third parties.\nc. Provide accurate and complete information during the registration process.\nd. Not engage in any activity that may interfere with or disrupt the functionality of the App.\n\nYour use of the App is also governed by our Privacy Policy, which can be found here. Please review the Privacy Policy to understand how we collect, use, and disclose your information.\nTo access certain features of the App, you may be required to register for an account. You are responsible for maintaining the confidentiality of your account information and for all activities that occur under your account. Career Validity reserves the right to suspend or terminate your account if it believes that your account information is inaccurate or if you violate these Terms.\nThe App is provided \"as is\" and \"as available\" without any warranties, express or implied. Career Validity does not guarantee the accuracy, completeness, or reliability of any content or information provided by the App.\nCareer Validity and its affiliates shall not be liable for any indirect, incidental, special, consequential, or punitive damages, or any loss of profits or revenues, whether incurred directly or indirectly.\nCareer Validity reserves the right to modify or update these Terms at any time. Any changes will be effective immediately upon posting. Continued use of the App after such changes constitutes acceptance of the revised Terms.\nCareer Validity reserves the right to terminate, suspend, or restrict your access to the App for any reason, without notice.\nIf you have any questions or concerns about these Terms, please contact us at carvalindo23@email.com.\n\n\nBy using the Career Validity App, you agree to these Terms of Service. Thank you for using Career Validity!\n</string>
    <string name="insert_password">Insert Password</string>
    <string name="description_OTP">Masukkan 4 digit kode OTP telah dikirimkan ke \n%1$s</string>
    <string name="desc_boarding_3">Through our app, you can also, \n get information about fake jobs around the world \nso you won\'t get caught anymore</string>
    <string name="title_boarding_3">Get Information about Fake jobs</string>
    <string name="desc_boarding_2">Distinguish Real from Risks, \nYour Trusted Career Guardian!</string>
    <string name="title_boarding_2">Verified and Validated for Your Success!</string>
    <string name="desc_boarding_1">Using our latest machine learning model, \n get information about whether you are applying \nfor the right job or not</string>
    <string name="title_boarding_1">Check Your Job Validity</string>
    <string name="back_button">back_button</string>
    <string name="news_title">News_Title</string>
    <string name="penulis">Penulis</string>
    <string name="newsoutlet">NewsOutlet</string>
    <string name="tanggal">Tanggal</string>
    <string name="newsdetail">NewsDetail</string>
    <string name="desc_forgot_pass">Don’t worry! It occurs. Please enter the \nemail address linked with your account.</string>
    <string name="title_forgot_pass">Forget your password?</string>
    <string name="desc_login">Login with your Account to \n receive full access of this app</string>
    <string name="insert_email">Insert Email</string>
    <string name="login">Login</string>
    <string name="reminder_login">Didn\'t own an account yet?</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="verification">Verification</string>
    <string name="check_email">Kindly check your email</string>
    <string name="title_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="didn_t_receive_an_otp">Didn\'t receive an OTP?</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify_and_set_new_password">Verify and Set new password</string>
    <string name="create_new_password">Create new Password</string>
    <string name="unique">Your new password must be \nunique from those previously used</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="desc_register">Provide us with the information \n required to create an account</string>
    <string name="insert_name">Insert Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="user_name">Billy Franko</string>
    <string name="user_email">abcdedf@gmail.com</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="more">More</string>
    <string name="change_password">Change Password</string>
    <string name="tos">Terms of Service</string>
    <string name="logout">Logout</string>
    <string name="search_for_news">Search for News</string>
    <string name="job_form_title">Job Validity Check Form</string>
    <string name="job_form_desc">Kindly complete the data necessary \n to proceed with the checking process</string>
    <string name="job_name">Job Name</string>
    <string name="job_ex">Ex : Software Developer</string>
    <string name="location">Location</string>
    <string name="location_ex">Ex : Jakarta, Indonesia</string>
    <string name="department">Department</string>
    <string name="department_ex">Ex : Marketing, Sales, HR</string>
    <string name="salary_range">Salary Range (USD)</string>
    <string name="salary_ex">Ex : 120000-150000</string>
    <string name="profile">Company Profile</string>
    <string name="profile_ex">Ex : PGI is a fast growing organic herb/spice/botanicals importing and production company</string>
    <string name="description">Description</string>
    <string name="description_ex">Ex : We are currently seeking a Customer Service Team Lead. you must have excellent sales talents..</string>
    <string name="requirement">Requirement</string>
    <string name="requirement_ex">Ex : Minimum of 1 year customer service related experience, bachelor\'s degree in counseling, psychology, social science or health-related</string>
    <string name="benefits">Benefits</string>
    <string name="benefits_ex">Ex : Hourly plus commissions. Work with a great team of people in a positive, encouraging environment</string>
    <string name="telecommuting">Telecommuting</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
    <string name="welcome_nama">Welcome, Nama</string>
    <string name="recent_news">Recent News</string>
    <string name="yes_verify">Yes, Verify my account</string>
    <string name="layout_login_desc">Looks like you haven\'t \nverified your account yet,\nwould you like to verify your account?</string>
    <string name="layout_login_title">Login Successfull</string>
    <string name="btn_continue_info">Maybe Later</string>
    <string name="data1">Data1</string>
    <string name="data2">Data2</string>
    <string name="data3">Data3</string>
    <string name="make_the_change">Make the change</string>
    <string name="prediciton_result">Real</string>
    <string name="prediction_confidence">Confidence :</string>
    <string name="btn1_desc">Try Again</string>
    <string name="btn2_desc">Back to Home</string>
    <string name="verify_your_account">Verify Your Account!</string>
    <string name="verify_desc">This feature will only be accesible \nonce you verified you have verified\n your account</string>
</resources>