<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".ui.form.FormFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:id="@+id/tv_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/job_form_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_DescriptionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/job_form_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_Title"/>


        <TextView
            android:id="@+id/tv_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_DescriptionTitle"
            android:text="@string/job_name"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_Name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:selectAllOnFocus="true"
            android:hint="@string/job_ex"
            android:textSize="17sp"
            android:paddingStart="17dp"
            android:paddingEnd="17dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_Name"
            android:background="@drawable/border_radius"
            />
        <TextView
            android:id="@+id/tv_Location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@id/et_Name"
            android:text="@string/location"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_Location"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:selectAllOnFocus="true"
            android:hint="@string/location_ex"
            android:textSize="17sp"
            android:paddingStart="17dp"
            android:paddingEnd="17dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_Location"
            android:background="@drawable/border_radius"
            />
        <TextView
            android:id="@+id/tv_Department"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@id/et_Location"
            android:text="@string/department"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_Department"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:selectAllOnFocus="true"
            android:textSize="17sp"
            android:paddingStart="17dp"
            android:hint="@string/department_ex"
            android:paddingEnd="17dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_Department"
            android:background="@drawable/border_radius"
            />
        <TextView
            android:id="@+id/tv_Salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@id/et_Department"
            android:text="@string/salary_range"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_Salary"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:selectAllOnFocus="true"
            android:textSize="17sp"
            android:hint="@string/salary_ex"
            android:paddingStart="17dp"
            android:paddingEnd="17dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_Salary"
            android:background="@drawable/border_radius"
            />
        <TextView
            android:id="@+id/tv_Profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@id/et_Salary"
            android:text="@string/profile"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_Profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:selectAllOnFocus="true"
            android:layout_marginHorizontal="24dp"
            android:textSize="17sp"
            android:paddingStart="17dp"
            android:paddingTop="4dp"
            android:hint="@string/profile_ex"
            android:paddingBottom="4dp"
            android:gravity="top|left"
            android:paddingEnd="17dp"
            android:inputType="textMultiLine"
            android:lines="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_Profile"
            android:background="@drawable/border_radius"
            />
        <TextView
            android:id="@+id/tv_Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@id/et_Profile"
            android:text="@string/description"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:selectAllOnFocus="true"
            android:inputType="textMultiLine"
            android:hint="@string/description_ex"
            android:gravity="top|left"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textSize="17sp"
            android:paddingStart="17dp"
            android:paddingEnd="17dp"
            android:lines="4"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_Description"
            android:background="@drawable/border_radius"
            />
        <TextView
            android:id="@+id/tv_Requirement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@id/et_Description"
            android:text="@string/requirement"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_Requirement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:selectAllOnFocus="true"
            android:inputType="textMultiLine"
            android:hint="@string/requirement_ex"
            android:gravity="top|left"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textSize="17sp"
            android:paddingStart="17dp"
            android:paddingEnd="17dp"
            android:lines="4"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_Requirement"
            android:background="@drawable/border_radius"
            />

        <TextView
            android:id="@+id/tv_Benefits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/benefits"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_Requirement" />

        <EditText
            android:id="@+id/et_Benefits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:selectAllOnFocus="true"
            android:inputType="textMultiLine"
            android:gravity="top|left"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:hint="@string/benefits_ex"
            android:textSize="17sp"
            android:paddingStart="17dp"
            android:paddingEnd="17dp"
            android:lines="4"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_Benefits"
            android:background="@drawable/border_radius"
            />
        <TextView
            android:id="@+id/tv_Telecommuting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@id/et_Benefits"
            android:text="@string/telecommuting"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/yesNoRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_Telecommuting"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/yesRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/noRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="48dp"
            android:background="@drawable/border_radius"
            android:backgroundTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/submit"
            app:layout_constraintTop_toBottomOf="@id/yesNoRadioGroup" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>